fixing that the expenses and incomes were a bit misaligned to the left

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -158,12 +158,15 @@ svg {
 .expense-card {
     display: grid;
     width: clamp(22rem, 90%, 30rem);
-    margin: var(--spacing-medium);
     padding: var(--spacing-large);
     border: 1px solid gray;
 
     border-radius: var(--border-radius);
     grid-template-columns: 1fr auto;
+}
+
+.expense-card + .expense-card {
+    margin-top: var(--spacing-large);
 }
 
 .expense-card__title {
@@ -198,12 +201,15 @@ svg {
 .income-card {
     display: grid;
     width: clamp(16rem, 90%, 30rem);
-    margin: var(--spacing-medium);
     padding: var(--spacing-large);
     border: 1px solid gray;
 
     border-radius: var(--border-radius);
     grid-template-columns: 1fr auto;
+}
+
+.income-card + .income-card {
+    margin-top: var(--spacing-large);
 }
 
 .income-card__title {
